[gd_scene load_steps=4 format=3 uid="uid://ctnlvn1pgryrm"]

[ext_resource type="Texture2D" uid="uid://dfrubkf4pjgeq" path="res://assets/Attack/flame_rinse.png" id="1_hibm7"]
[ext_resource type="Script" path="res://scripts/flame_attack.gd" id="2_jqjx5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_na1bs"]
radius = 14.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["weapon_group"]]
collision_layer = 16
collision_mask = 32
script = ExtResource("2_jqjx5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_hibm7")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_na1bs")

[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
